Рефакторинг модели блюда, добавление адаптера RecyclerView и Glide
Заменяет модель Dishes на DishesManager для централизованного управления списком блюд.
Добавляет адаптер RecyclerViewDishesAdapter для отображения блюд с изображениями через Glide.
Обновляет AddActivity для использования новой модели и адаптера, улучшает обработку поиска.
Рефакторит EdostavkaParser для работы с DishesManager.
Добавляет заглушки и изображения ошибок, новый макет элемента RecyclerView, обновляет строки.
Удаляет устаревшие тесты и добавляет новый тест для обновлённого парсера.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
     <string name="searchbar_hint">Название товара</string>
+    <string name="productsPhoto">Фото продукта</string>
 </resources>
