--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     </string>
     <string name="searchbar_hint">Название товара</string>
     <string name="productsPhoto">Фото продукта</string>
+    <string name="NothingFind">Ничего не найдено :(</string>
 </resources>
