Добавлены модели Dish и Nutrition, обновлена работа с продуктами
Добавлены классы-модели Dish и Nutrition для инкапсуляции данных о блюде и его питательной ценности. Рефакторинг класса Product: теперь он использует Nutrition вместо отдельных полей КБЖУ. Обновлены EdostavkaParser, ViewAddedFragment и связанный интерфейс для поддержки создания блюд и вычисления их питательности. Добавлен утилитный класс DishCalculator для суммирования КБЖУ из списка продуктов. Обновлены тесты и UI-строки с учётом этих изменений.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="addedProducts">Добавленные продукты</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_choosing_products_button">Кнопка для добавления выбранных продуктов</string>
+    <string name="add_button">Добавить</string>
 </resources>
