--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -60,4 +60,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_choosing_products_button">Кнопка для добавления выбранных продуктов</string>
     <string name="add_button">Добавить</string>
+    <string name="inputName">Название</string>
+    <string name="enter_name_new_dish">Введите название нового блюда</string>
 </resources>
