Рефакторинг адаптеров и макетов для списков блюд и продуктов
Внедрён обобщённый DiffUtil.Callback для обновления списков, заменяющий ProductDiffCallback. Добавлен DishAdapter и соответствующий макет для отображения блюд. Адаптеры ProductFindListAdapter и ProductSelectedAdapter переведены на использование обобщённого diff callback; обновлены их макеты и привязки представлений. Переименованы и переработаны макеты элементов RecyclerView, связанных с продуктами, для единообразия. Улучшен интерфейс главной активности: добавлены прозрачные системные панели, новые строковые ресурсы и стили для улучшения визуальной согласованности.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -62,4 +62,9 @@
     <string name="add_button">Добавить</string>
     <string name="inputName">Название</string>
     <string name="enter_name_new_dish">Введите название нового блюда</string>
+    <string name="dish_photo">Фото блюда</string>
+    <string name="calories">Ккал:</string>
+    <string name="protein">Белки:</string>
+    <string name="fat">Жиры:</string>
+    <string name="carb">Углеводы:</string>
 </resources>
