Улучшено отображение деталей блюда и рефакторинг вычисления КБЖУ
Добавлен BottomSheetDialog для отображения детальной информации о блюде, включая изображение, название и список ингредиентов с их массой. Реализован IngredientsAdapter для отображения ингредиентов в RecyclerView внутри BottomSheetDialog.

Метод для вычисления КБЖУ перенесен из NutritionCalculator в класс Nutrition. Класс NutritionCalculator удален. Функция parseFloatSafe перенесена в ViewUtils.

В DishesAdapter добавлена обработка обычного и долгого нажатия на элемент списка. Обычное нажатие открывает BottomSheetDialog с деталями блюда. Долгое нажатие открывает контекстное меню с опциями "Изменить" и "Удалить". Обновлено форматирование числовых значений КБЖУ и массы для лучшего отображения.

Переименован макет recycler_view_found_product.xml в list_item_product.xml и обновлены ссылки на него. Добавлены новые строковые ресурсы и макет для контекстного меню.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -67,4 +67,7 @@
     <string name="protein">Белки:</string>
     <string name="fat">Жиры:</string>
     <string name="carb">Углеводы:</string>
+    <string name="action_edit">Изменить\n</string>
+    <string name="action_delete">Удалить</string>
+    <string name="ingredients">Ингредиенты</string>
 </resources>
