--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="action_edit">Изменить\n</string>
     <string name="action_delete">Удалить</string>
     <string name="ingredients">Ингредиенты</string>
+    <string name="enter_products_name">Введите имя продукта</string>
 </resources>
