Реализовано удаление блюд свайпом в MainActivity и соответствующие изменения
Добавлена функция удаления блюд свайпом влево или вправо в списке на MainActivity. При свайпе появляется диалог подтверждения удаления. Внесены изменения в DataRepository и DishDao для поддержки удаления блюда из базы данных. Адаптер DishesAdapter упрощен: удалены методы onEditClick и onDeleteClick, а также логика отображения контекстного меню при долгом нажатии. В DishDiffCallback для сравнения элементов теперь используется ID блюда вместо имени. Обновлены строковые ресурсы для диалога удаления и сообщений об ошибках.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -71,4 +71,8 @@
     <string name="action_delete">Удалить</string>
     <string name="ingredients">Ингредиенты</string>
     <string name="enter_products_name">Введите имя продукта</string>
+    <string name="delete">Вы действительно хотите безвозвратно удалить блюдо?</string>
+    <string name="error_deleting_dish">Ошибка удаления блюда!</string>
+    <string name="delete_dish_confirmation">\'%1$s\'</string>
+    <string name="error_loading_dishes">Ошибка добавления блюда в БД!</string>
 </resources>
