Рефакторинг редактирования и добавления блюд, улучшение UX
Вынесен диалог редактирования/ввода названия блюда в `DialogUtils`. В `AddActivity` этот диалог используется для ввода имени нового блюда. В `MainActivity` он используется для редактирования имени существующего блюда прямо из BottomSheet с деталями блюда.

Улучшена обработка ошибок и пользовательский фидбек в `AddActivity` и `MainActivity` при работе с базой данных и парсером (добавлены строки ошибок, вывод сообщений через Snackbar).
В `AddActivity` добавлена проверка на наличие выбранных продуктов перед показом `ViewAddedFragment`. Очистка `ProductsSelectedManager` происходит при выходе из `AddActivity`.
В `MainActivity` BottomSheet с деталями блюда теперь корректно обрабатывает появление клавиатуры и перезагружает список блюд после закрытия.

В `DishDao` добавлен метод `updateDish` для обновления существующего блюда. `DataRepository` теперь использует этот метод для изменения имени блюда.
Модель `Dish` теперь учитывает `id` в методах `equals()` и `hashCode()`.
В `DishesAdapter` исправлено сравнение элементов в `DiffUtil.Callback`.
Добавлены новые строки для ошибок и уведомлений.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -75,4 +75,7 @@
     <string name="error_deleting_dish">Ошибка удаления блюда!</string>
     <string name="delete_dish_confirmation">\'%1$s\'</string>
     <string name="error_loading_dishes">Ошибка добавления блюда в БД!</string>
+    <string name="error_update_name_dish">Ошибка обновления названия блюда!</string>
+    <string name="no_products_selected">Ни один продукт не выбран!</string>
+    <string name="error_parser_text">Ошибка запроса!</string>
 </resources>
