Рефакторинг отображения информации о блюде и управления выбранными продуктами
Вынесен UI и логика отображения деталей блюда в отдельный класс `DishDetailsBottomSheet`.
В `MainActivity` логика показа деталей блюда заменена на использование нового `DishDetailsBottomSheet`. Добавлен слушатель для обновления списка блюд после редактирования в `DishDetailsBottomSheet`.
В `DataRepository` изменен тип параметра конструктора и метода `getInstance` с `Application` на `Context`.
В `ViewAddedFragment` (переименован из `fragment_view_added.xml` в `bottom_sheet_added_ingredients.xml`) добавлена возможность удаления продуктов из списка свайпом с диалогом подтверждения. Соответствующий метод `remove` добавлен в `ProductsSelectedManager`.
Обновлены идентификаторы представлений в макете `bottom_sheet_added_ingredients.xml` и `bottom_sheet_dish_details.xml`.
Обновлены строки, связанные с удалением и ошибками.
Метод `getAll().isEmpty()` в `AddActivity` заменен на `size() == 0` при проверке выбранных продуктов.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -71,9 +71,9 @@
     <string name="action_delete">Удалить</string>
     <string name="ingredients">Ингредиенты</string>
     <string name="enter_products_name">Введите имя продукта</string>
-    <string name="delete">Вы действительно хотите безвозвратно удалить блюдо?</string>
-    <string name="error_deleting_dish">Ошибка удаления блюда!</string>
-    <string name="delete_dish_confirmation">\'%1$s\'</string>
+    <string name="delete">Удалить безвозвратно?</string>
+    <string name="error_deleting">Ошибка удаления!</string>
+    <string name="delete_confirmation">\'%1$s\'</string>
     <string name="error_loading_dishes">Ошибка добавления блюда в БД!</string>
     <string name="error_update_name_dish">Ошибка обновления названия блюда!</string>
     <string name="no_products_selected">Ни один продукт не выбран!</string>
