Реализовано обновление массы продукта в списках ингредиентов
Модели `Product` и `Nutrition` сделаны `Parcelable` для передачи между компонентами.
В `ProductsSelectedManager` добавлен метод `setAll` для обновления всего списка продуктов.
Создан утилитный класс `ProductListUpdater` с методом `updateProductInList` для безопасного обновления массы продукта в списке и возврата нового списка.
`IngredientsAdapter` теперь использует `FragmentManager` для отправки результатов (изменённый продукт и новая масса) через `FragmentResultListener` родительскому компоненту (`ViewAddedBottomSheet` или `DishDetailsBottomSheet`).
`ViewAddedBottomSheet` и `DishDetailsBottomSheet` обрабатывают результат от `IngredientsAdapter`:
    - В `ViewAddedBottomSheet` обновляется список в `ProductsSelectedManager` и адаптер.
    - В `DishDetailsBottomSheet` обновляется объект `Dish` (список продуктов и общее КБЖУ), затем данные сохраняются в БД, и UI обновляется.
Добавлена строка ресурса для ошибки обновления продукта.

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="invitation_to_create_a_dish">Чтобы создать блюдо, нажмите на +</string>
     <string name="added_ingredients_willnt_be_saved">Добавленные ингредиенты не будут сохранены!</string>
     <string name="error_deleting_product_in_dish">Блюдо должно содержать как минимум один продукт!</string>
+    <string name="error_update_product">Ошибка обновления продукта!</string>
 </resources>
